[package]
name = "mirl_extensions"
version = "0.0.0-alpha"
edition.workspace = true
repository.workspace = true


[features]
default = ["std"]
std = ["mirl_extensions_conversion/std"]
# Core
all = [
    "mirl_values",
    "indexmap",
    "dashmap",
    "masstree",
    "tokio",
    "ascii",
    "mirl_graphics",
    "mirl_input",
    "mirl_collections",
]

### Compatibility with ffi
c_compatible = []

# Supported crates
### Mirl
mirl_values = [
    "dep:mirl_values_core",
    "bigint",
    "bigfloat",
    "mirl_extensions_conversion/mirl_values",
]
mirl_collections = ["dep:mirl_collections"]
mirl_graphics = ["dep:mirl_graphics"]
mirl_input = ["dep:mirl_input"]
mirl_geometry = ["dep:mirl_geometry_core"]

### Support for hashmap libs
indexmap = [
    "dep:indexmap",
    "std",
    "mirl_extensions_core/indexmap",
    "mirl_extensions_conversion/indexmap",
]
dashmap = [
    "dep:dashmap",
    "std",
    "mirl_extensions_core/dashmap",
    "mirl_extensions_conversion/dashmap",
]
masstree = [
    "dep:masstree",
    "std",
    "mirl_extensions_core/masstree",
    "mirl_extensions_conversion/masstree",
]

# Async
tokio = ["dep:tokio", "mirl_extensions_conversion/tokio"]

glfw = ["mirl_extensions_conversion/glfw"]

bigfloat = [
    "dep:num-bigfloat",
    "mirl_extensions_conversion/bigfloat",
    "mirl_extensions_math/bigfloat",
]
bigint = [
    "dep:num-bigint",
    "dep:num-traits",
    "mirl_extensions_conversion/bigint",
    "mirl_extensions_math/bigint",
]

ascii = ["mirl_extensions_conversion/ascii"]

_checking = [
    "indexmap",
    "dashmap",
    "masstree",
    "tokio",
    "mirl_values",
    "ascii",
    "mirl_graphics",
    "mirl_input",
    "mirl_collections",
    "mirl_geometry",
]
[dependencies]
# mirl_core = { version = "0.0.0-alpha" }
mirl_extensions_core = { version = "0.0.0-alpha" }
mirl_extensions_math = { version = "0.0.0-alpha" }
mirl_extensions_conversion = { version = "0.0.0-alpha" }
mirl_buffer = { version = "0.0.0-alpha" }
mirl_values_core = { version = "0.0.0-alpha", optional = true }

mirl_collections = { version = "0.0.0-alpha", optional = true }
mirl_graphics = { version = "0.0.0-alpha", optional = true }
mirl_input = { version = "0.0.0-alpha", optional = true }
mirl_geometry_core = { version = "0.0.0-alpha", optional = true }

# Crate support


### Like a HashMap but it remembers in what order elements were inserted
indexmap = { version = "2.13.0", optional = true, default-features = false, features = [
    "std",
] }
### Like a HashMap but concurrent
dashmap = { version = ">=6.1.0", optional = true, default-features = false }
# ### Like dashmap but faster reading and slower writing
# evmap = { version = ">=11.0.0", optional = true, default-features = false }
### A concurrent indexmap
masstree = { version = "0.9.2", optional = true, default-features = false }

### Concurrency
tokio = { version = "1.50.0", optional = true, features = ["sync"] }

### Number crates
num-bigint = { version = "0.4.2", optional = true }
num-bigfloat = { version = "1.7", optional = true }
num-traits = { version = "0.2.19", optional = true }


[lints]
workspace = true


[build-dependencies]
mirl_build_tools = { workspace = true }
